<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/groceryItemViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/groceryname"
            android:textSize="24sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/groceryItemViewQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/quantityHint"
            android:textSize="18sp"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/groceryItemViewPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/priceperHint"
            android:visibility="visible" />

        <TextView
            android:id="@+id/grocerItemViewTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/totalHint" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
